manifests_test/sites-certificates/school-two-drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-two-drupal-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - school-two.nsgtech.eu
      secretName: school-two-drupal-tls
  rules:
    - host: school-two.nsgtech.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drupal10-svc  # <-- use your service name
                port:
                  number: 80
